# qualer_mcp

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  CHECKLIST.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  claude_desktop_config.json  continue_config.yaml  pyproject.toml  qualer_mcp_server.py  requirements.txt  setup.ps1  test_api_call.py  test_qualer_mcp.py  test_server.py
.github/workflows/: ci.yml
docs/: CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md
tests/: test_api_call.py  test_qualer_mcp.py  test_server.py
