[project]
name = "qualer-mcp"
version = "0.1.0"
description = "MCP server wrapping the Qualer SDK for AI agent integration"
authors = [
    {name = "Johnson Gage Quality Inspection Inc."}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
